syntax = "proto3";

package oblivionHelper;

service OblivionService {
  rpc Start (StartRequest) returns (StartResponse);
  rpc Stop (StopRequest) returns (StopResponse);
  rpc StreamStatus (StatusRequest) returns (stream StatusResponse);
  rpc Exit (ExitRequest) returns (ExitResponse);
}

message StartRequest {}
message StartResponse {
  string message = 1;
}
message StopRequest {}
message StopResponse {
  string message = 1;
}
message StatusRequest {}
message StatusResponse {
  string status = 1;
}
message ExitRequest {}
message ExitResponse {}